[package]
name = "kotlin-linesweeper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kotlin bindings for the linesweeper Rust library - boolean operations on closed Bezier paths"
repository = "https://github.com/user/kotlin-linesweeper"

[lib]
crate-type = ["cdylib"]
name = "kotlin_linesweeper"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
linesweeper = { git = "https://github.com/jneem/linesweeper", rev = "5b5592d60b304924fb11d1dc1e5f5bed0a68c2aa" }
kurbo = "0.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }


[workspace]
