[package]
name = "kotlin-linesweeper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kotlin bindings for linesweeper, a robust Bézier boolean ops library"
repository = "https://github.com/user/kotlin-linesweeper"

[lib]
crate-type = ["cdylib"]
name = "kotlin_linesweeper"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
linesweeper = { git = "https://github.com/jneem/linesweeper", rev = "7d620ed004605141519037c681edac93e22f5855" }
kurbo = "0.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }


[workspace]
