[package]
name = "kotlin-linesweeper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kotlin bindings for linesweeper, a robust Bézier boolean ops library"
repository = "https://github.com/user/kotlin-linesweeper"

[lib]
crate-type = ["cdylib"]
name = "kotlin_linesweeper"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.31.0", features = ["cli"] }
linesweeper = { git = "https://iris.radicle.xyz/rad%3Az2jbcL8tV3Fqqqk1yPyGkDTjgaTfH.git", rev = "f68d1825a236520269465568fe8a905ea079181a" }
kurbo = "0.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }


[workspace]
